# pwrapi-ref

./: README-WattProf-Integration  configure.ac
config/: pwrapi_wattprof.m4
examples/: Makefile.am  snippet.c
examples/config/: wp-node.xml  wp-node.xml.new  wp-node.xml.old  wp-platform.xml
src/plugins/: Makefile.am  pwr_wpdev.c
src/pwr/: cntxt.cc  xmlConfig.cc
